agregue clase hover a anchors

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                <img src="./imagenes/logo.png" alt="" class="logo" class="header__menu">
             </a>
             <li><a class="color activado" href="#">Inicio</a></li>
-            <li><a href="./paginas/clases.html" class="color">Clases</a> </li>
-            <li><a href="./paginas/rutinas.html" class="color">Rutinas</a></li>
-            <li><a href="./paginas/sobre-nosotros.html" class="color">Sobre nosotros</a></li>
-            <li><a href="./paginas/contacto.html" class="color">Contacto</a></li>
+            <li><a href="./paginas/clases.html" class="color hover">Clases</a> </li>
+            <li><a href="./paginas/rutinas.html" class="color hover">Rutinas</a></li>
+            <li><a href="./paginas/sobre-nosotros.html" class="color hover">Sobre nosotros</a></li>
+            <li><a href="./paginas/contacto.html" class="color hover">Contacto</a></li>
          </ul>
    </header>
    <main class="inicio">
