Agregue class hover a las otras paginas

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -19,16 +19,16 @@
                <img src="../imagenes/logo.png" alt="Logo del gimnasio" class="logo">
             </a>
             <li>
-               <a href="../index.html" class="color">Inicio</a>
+               <a href="../index.html" class="color hover">Inicio</a>
             </li>
             <li>
-               <a href="./clases.html" class="color">Clases</a>
+               <a href="./clases.html" class="color hover">Clases</a>
             </li>
             <li>
-               <a href="./rutinas.html" class="color">Rutinas</a>
+               <a href="./rutinas.html" class="color hover">Rutinas</a>
             </li>
             <li>
-               <a href="./sobre-nosotros.html" class="color">Sobre nosotros</a>
+               <a href="./sobre-nosotros.html" class="color hover">Sobre nosotros</a>
             </li>
             <li>
                <a href="#" class="color contacto">Contacto</a>
