--- a/paginas/clases.html
+++ b/paginas/clases.html
@@ -19,19 +19,19 @@
                <img src="../imagenes/logo.png" alt="Logo del gimnasio" class="logo">
             </a>
             <li>
-               <a href="../index.html" class="color">Inicio</a>
+               <a href="../index.html" class="color hover">Inicio</a>
             </li>
             <li>
                <a href="#" class="color clasesBg">Clases</a>
             </li>
             <li>
-               <a href="./rutinas.html" class="color">Rutinas</a>
+               <a href="./rutinas.html" class="color hover">Rutinas</a>
             </li>
             <li>
-               <a href="./sobre-nosotros.html" class="color">Sobre nosotros</a>
+               <a href="./sobre-nosotros.html" class="color hover">Sobre nosotros</a>
             </li>
             <li>
-               <a href="./contacto.html" class="color">Contacto</a>
+               <a href="./contacto.html" class="color hover">Contacto</a>
             </li>
          </ul>
       </nav>
