--- a/paginas/rutinas.html
+++ b/paginas/rutinas.html
@@ -19,19 +19,19 @@
                <img src="../imagenes/logo.png" alt="Logo del gimnasio" class="logo">
             </a>
             <li>
-               <a href="../index.html" class="color">Inicio</a>
+               <a href="../index.html" class="color hover">Inicio</a>
             </li>
             <li>
-               <a href="./clases.html" class="color">Clases</a>
+               <a href="./clases.html" class="color hover">Clases</a>
             </li>
             <li>
-               <a href="#" class="color rutinas">Rutinas</a>
+               <a href="#" class="color rutinas ">Rutinas</a>
             </li>
             <li>
-               <a href="./sobre-nosotros.html" class="color ">Sobre nosotros</a>
+               <a href="./sobre-nosotros.html" class="color hover ">Sobre nosotros</a>
             </li>
             <li>
-               <a href="./contacto.html" class="color">Contacto</a>
+               <a href="./contacto.html" class="color hover">Contacto</a>
             </li>
          </ul>
       </nav>
