--- a/paginas/actividades.html
+++ b/paginas/actividades.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Sportivo Devoto | Contacto</title>
+   <title>Sportivo Devoto | Rutinas</title>
    <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,62 +36,54 @@
                      <a class="nav-link text-light" href="./precios.html">Precios</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link text-light" href="./actividades.html">Actividades</a>
+                     <a class="nav-link text-light" href="#">Actividades</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link text-light" href="./galeria.html">Horarios</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link text-light" href="#">Contacto</a>
+                     <a class="nav-link text-light" href="./contacto.html">Contacto</a>
                   </li>
                </ul>
             </div>
          </div>
       </nav>
    </header>
-   <main class="mainBg mainContacto"">
-         <div class=" centrar__h1">
-      <h1>Contactanos</h1>
+   <main class="inicio">
+      <div class="centrar__h1">
+         <h1>Actividades</h1>
       </div>
-      <div class="content">
-
-
-
-         <div class="contact-wrapper animated bounceInUp">
-            <div class="contact-form">
-               <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara
-                  comunicandose con vos!</h5>
-               <form action="">
-                  <p>
-                     <label>Nombre y Apellido</label>
-                     <input type="text" name="fullname">
-                  </p>
-                  <p>
-                     <label>Email </label>
-                     <input type="email" name="email">
-                  </p>
-                  <p>
-                     <label>Telefono Celular</label>
-                     <input type="tel" name="phone">
-                  </p>
-                  <p>
-                     <label>Asunto</label>
-                     <input type="text" name="affair">
-                  </p>
-                  <p class="block">
-                     <label>Mensaje</label>
-                     <textarea name="message" rows="3"></textarea>
-                  </p>
-                  <p class="block">
-                     <button>
-                        Enviar
-                     </button>
-                  </p>
-               </form>
-            </div>
-
+      <section class="actividades">
+         <div class="tarjetas boxeo">
+            <div class="card3"><a href="./galeria.html">
+                  <h3 class="contenido">Boxeo</h3>
+               </a></div>
          </div>
+         <div class="tarjetas crossfit"><a href="./galeria.html">
+               <h3 class="contenido">Crossfit</h3>
+            </a>
+         </div>
+         <div class=" tarjetas spinning"><a href="./galeria.html">
+               <h3 class="contenido">spinning</h3>
+            </a></div>
+         <div class="tarjetas zumba"><a href="./galeria.html">
+               <h3 class="contenido">Zumba</h3>
+            </a></div>
+         <div class="tarjetas gimnasio"><a href="./galeria.html">
+               <h3 class="contenido">Musculación</h3>
+            </a></div>
+         <div class="tarjetas football"><a href="./galeria.html">
+               <h3 class="contenido">football</h3>
+            </a></div>
+      </section>
+
+
+
+
+
+
    </main>
+
    <footer class="pie-pagina">
       <div class="grupo-1">
          <div class="box">
@@ -118,8 +110,14 @@
          <small>&copy; 2022 <b>Santiago Messina</b> </small>
       </div>
    </footer>
+
+
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
