--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Sportivo Devoto | Contacto</title>
+   <title>Sportivo Devoto | Actividades</title>
    <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-   <link rel="stylesheet" href="../paginas/style.css">
+   <link rel="stylesheet" href="./style.css">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 
 </head>
@@ -39,59 +39,70 @@
                      <a class="nav-link text-light" href="./actividades.html">Actividades</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link text-light" href="./galeria.html">Horarios</a>
+                     <a class="nav-link text-light" href="#">Horarios</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link text-light" href="#">Contacto</a>
+                     <a class="nav-link text-light" href="./contacto.html">Contacto</a>
                   </li>
                </ul>
             </div>
          </div>
       </nav>
    </header>
-   <main class="mainBg mainContacto"">
-         <div class=" centrar__h1">
-      <h1>Contactanos</h1>
+   <main class="inicio">
+
+
+
+
+      <div class="centrar__h1">
+         <h1>Actividades</h1>
       </div>
-      <div class="content">
-
-
-
-         <div class="contact-wrapper animated bounceInUp">
-            <div class="contact-form">
-               <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara
-                  comunicandose con vos!</h5>
-               <form action="">
-                  <p>
-                     <label>Nombre y Apellido</label>
-                     <input type="text" name="fullname">
-                  </p>
-                  <p>
-                     <label>Email </label>
-                     <input type="email" name="email">
-                  </p>
-                  <p>
-                     <label>Telefono Celular</label>
-                     <input type="tel" name="phone">
-                  </p>
-                  <p>
-                     <label>Asunto</label>
-                     <input type="text" name="affair">
-                  </p>
-                  <p class="block">
-                     <label>Mensaje</label>
-                     <textarea name="message" rows="3"></textarea>
-                  </p>
-                  <p class="block">
-                     <button>
-                        Enviar
-                     </button>
-                  </p>
-               </form>
+      <section class="actividades1">
+         <div class="boxeo1">
+            <div class="card3">
+               <h3 class="contenido1">Boxeo</h3>
+               <p> <i class="fa-solid fa-heart-pulse"></i> lunes 20:00hs</p>
+               <p> <i class="fa-solid fa-heart-pulse"></i> Miercoles 20:00hs</p>
+               <p> <i class="fa-solid fa-heart-pulse"></i> Viernes 20:00hs</p>
+               <p> <i class="fa-solid fa-heart-pulse"></i> Sabado 11:00hs</p>
             </div>
+         </div>
+         <div class="crossfit1">
+            <h3 class="contenido1">Crossfit</h3>
+            <p><i class="fa-solid fa-dumbbell"></i> martes 16:00hs</p>
+            <p> <i class="fa-solid fa-dumbbell"></i> jueves 18:00hs</p>
+            <p> <i class="fa-solid fa-dumbbell"></i> Viernes 16:00hs</p>
 
          </div>
+         <div class="spinning1">
+            <h3 class="contenido1">spinning</h3>
+            <p> <i class="fa-solid fa-person-biking"></i> lunes 10:00hs</p>
+            <p> <i class="fa-solid fa-person-biking"></i> martes 09:00hs</p>
+            <p> <i class="fa-solid fa-person-biking"></i> jueves 09:00hs</p>
+            <p><i class="fa-solid fa-person-biking"></i> viernes 10:00hs</p>
+         </div>
+         <div class="zumba1">
+            <h3 class="contenido1">Zumba</h3>
+            <p> <i class="fa-solid fa-bolt"></i> miercoels 08:00hs</p>
+            <p> <i class="fa-solid fa-bolt"></i> jueves 09:00hs</p>
+            <p> <i class="fa-solid fa-bolt"></i> viernes 08:00hs</p>
+            <p> <i class="fa-solid fa-bolt"></i> sabados 10:00hs</p>
+         </div>
+         <div class="gimnasio1">
+            <h3 class="contenido1">Musculación</h3>
+            <p>Entrena a la hora que quieras</p>
+
+         </div>
+         <div class="football1">
+            <h3 class="contenido1">football</h3>
+            <p> <i class="fa-solid fa-futbol"></i> lunes 19:00hs</p>
+            <p><i class="fa-solid fa-futbol"></i> martes 21:00hs</p>
+            <p> <i class="fa-solid fa-futbol"></i> jueves 21:00hs</p>
+            <p><i class="fa-solid fa-futbol"></i> viernes 19:00hs</p>
+         </div>
+      </section>
    </main>
+
    <footer class="pie-pagina">
       <div class="grupo-1">
          <div class="box">
@@ -118,8 +129,11 @@
          <small>&copy; 2022 <b>Santiago Messina</b> </small>
       </div>
    </footer>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </html>
