--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,125 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Sportivo Devoto | Contacto</title>
-   <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-   <link rel="stylesheet" href="../paginas/style.css">
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-
-</head>
-
-<body class="bodyBg">
-   <header class="headerInicio">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sportivo Devoto | Contacto</title>
+    <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../paginas/style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+  </head>
+  <body class="bodyBg">
+    <header class="headerInicio">
       <nav class="navbar navbar-expand-lg navbar-light ">
-         <div class="container-fluid">
-            <a class="navbar-brand text-light" href="../index.html">Sportivo <span class="rojo">Devoto</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-               <ul class="navbar-nav">
-
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./precios.html">Precios</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./actividades.html">Actividades</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./galeria.html">Horarios</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="#">Contacto</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="../index.html">Sportivo <span class="rojo">Devoto</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./precios.html">Precios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./actividades.html">Actividades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./galeria.html">Horarios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-   </header>
-   <main class="mainBg mainContacto"">
-         <div class=" centrar__h1">
+    </header>
+    <main class="mainBg mainContacto"">
+												<div class=" centrar__h1">
       <h1>Contactanos</h1>
       </div>
       <div class="content">
-
-
-
-         <div class="contact-wrapper animated bounceInUp">
-            <div class="contact-form">
-               <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara
-                  comunicandose con vos!</h5>
-               <form action="">
-                  <p>
-                     <label>Nombre y Apellido</label>
-                     <input type="text" name="fullname">
-                  </p>
-                  <p>
-                     <label>Email </label>
-                     <input type="email" name="email">
-                  </p>
-                  <p>
-                     <label>Telefono Celular</label>
-                     <input type="tel" name="phone">
-                  </p>
-                  <p>
-                     <label>Asunto</label>
-                     <input type="text" name="affair">
-                  </p>
-                  <p class="block">
-                     <label>Mensaje</label>
-                     <textarea name="message" rows="3"></textarea>
-                  </p>
-                  <p class="block">
-                     <button>
-                        Enviar
-                     </button>
-                  </p>
-               </form>
-            </div>
-
-         </div>
-   </main>
-   <footer class="pie-pagina">
+        <div class="contact-wrapper animated bounceInUp">
+          <div class="contact-form">
+            <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara comunicandose con vos!</h5>
+            <form action="">
+              <p>
+                <label>Nombre y Apellido</label>
+                <input type="text" name="fullname">
+              </p>
+              <p>
+                <label>Email </label>
+                <input type="email" name="email">
+              </p>
+              <p>
+                <label>Telefono Celular</label>
+                <input type="tel" name="phone">
+              </p>
+              <p>
+                <label>Asunto</label>
+                <input type="text" name="affair">
+              </p>
+              <p class="block">
+                <label>Mensaje</label>
+                <textarea name="message" rows="3"></textarea>
+              </p>
+              <p class="block">
+                <button> Enviar </button>
+              </p>
+            </form>
+          </div>
+        </div>
+    </main>
+    <footer class="pie-pagina">
       <div class="grupo-1">
-         <div class="box">
-            <figure>
-               <a class="navbar-brand text-light " href="#">Sportivo <span class="rojo">Devoto</span></a>
-            </figure>
-         </div>
-         <div class="box">
-            <h2 class="color">SOBRE NOSOTROS</h2>
-            <p> <i class="fa-solid fa-street-view"></i> Gabriela Mistral 3151, C1419 CABA</p>
-            <p> <i class="fa-solid fa-phone"></i>11-5678-1367</p>
-         </div>
-
-         <div class="box">
-            <h2 class="h2footer">SIGUENOS</h2>
-            <div class="red-social">
-               <a href="https://www.facebook.com/gsportivodevoto/" class="fa fa-facebook" target="blank"></a>
-               <a href="https://www.instagram.com/gsportivodevoto/?hl=es" class="fa fa-instagram" target="blank"></a>
-
-            </div>
-         </div>
+        <div class="box">
+          <figure>
+            <a class="navbar-brand text-light " href="#">Sportivo <span class="rojo">Devoto</span>
+            </a>
+          </figure>
+        </div>
+        <div class="box">
+          <h2 class="color">SOBRE NOSOTROS</h2>
+          <p>
+            <i class="fa-solid fa-street-view"></i> Gabriela Mistral 3151, C1419 CABA
+          </p>
+          <p>
+            <i class="fa-solid fa-phone"></i>11-5678-1367
+          </p>
+        </div>
+        <div class="box">
+          <h2 class="h2footer">SIGUENOS</h2>
+          <div class="red-social">
+            <a href="https://www.facebook.com/gsportivodevoto/" class="fa fa-facebook" target="blank"></a>
+            <a href="https://www.instagram.com/gsportivodevoto/?hl=es" class="fa fa-instagram" target="blank"></a>
+          </div>
+        </div>
       </div>
       <div class="grupo-2">
-         <small>&copy; 2022 <b>Santiago Messina</b> </small>
+        <small>&copy; 2022 <b>Santiago Messina</b>
+        </small>
       </div>
-   </footer>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-   integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+    </footer>
+  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
