--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -1,139 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Sportivo Devoto | Actividades</title>
-   <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
-   <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
-   <link rel="stylesheet" href="./style.css">
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-
-</head>
-
-<body class="bodyBg">
-   <header class="headerInicio">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sportivo Devoto | Horarios</title>
+    <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/2083819797/favicon4_400x400.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+  </head>
+  <body class="bodyBg">
+    <header class="headerInicio">
       <nav class="navbar navbar-expand-lg navbar-light ">
-         <div class="container-fluid">
-            <a class="navbar-brand text-light" href="../index.html">Sportivo <span class="rojo">Devoto</span></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-               <ul class="navbar-nav">
-
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./precios.html">Precios</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./actividades.html">Actividades</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="#">Horarios</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link text-light" href="./contacto.html">Contacto</a>
-                  </li>
-               </ul>
-            </div>
-         </div>
+        <div class="container-fluid">
+          <a class="navbar-brand text-light" href="../index.html">Sportivo <span class="rojo">Devoto</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./precios.html">Precios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./actividades.html">Actividades</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="#">Horarios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-light" href="./contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
-   </header>
-   <main class="inicio">
-
-
-
-
+    </header>
+    <main class="inicio">
       <div class="centrar__h1">
-         <h1>Actividades</h1>
+        <h1>Actividades</h1>
       </div>
       <section class="actividades1">
-         <div class="boxeo1">
-            <div class="card3">
-               <h3 class="contenido1">Boxeo</h3>
-               <p> <i class="fa-solid fa-heart-pulse"></i> lunes 20:00hs</p>
-               <p> <i class="fa-solid fa-heart-pulse"></i> Miercoles 20:00hs</p>
-               <p> <i class="fa-solid fa-heart-pulse"></i> Viernes 20:00hs</p>
-               <p> <i class="fa-solid fa-heart-pulse"></i> Sabado 11:00hs</p>
-            </div>
-         </div>
-         <div class="crossfit1">
-            <h3 class="contenido1">Crossfit</h3>
-            <p><i class="fa-solid fa-dumbbell"></i> martes 16:00hs</p>
-            <p> <i class="fa-solid fa-dumbbell"></i> jueves 18:00hs</p>
-            <p> <i class="fa-solid fa-dumbbell"></i> Viernes 16:00hs</p>
-
-         </div>
-         <div class="spinning1">
-            <h3 class="contenido1">spinning</h3>
-            <p> <i class="fa-solid fa-person-biking"></i> lunes 10:00hs</p>
-            <p> <i class="fa-solid fa-person-biking"></i> martes 09:00hs</p>
-            <p> <i class="fa-solid fa-person-biking"></i> jueves 09:00hs</p>
-            <p><i class="fa-solid fa-person-biking"></i> viernes 10:00hs</p>
-         </div>
-         <div class="zumba1">
-            <h3 class="contenido1">Zumba</h3>
-            <p> <i class="fa-solid fa-bolt"></i> miercoels 08:00hs</p>
-            <p> <i class="fa-solid fa-bolt"></i> jueves 09:00hs</p>
-            <p> <i class="fa-solid fa-bolt"></i> viernes 08:00hs</p>
-            <p> <i class="fa-solid fa-bolt"></i> sabados 10:00hs</p>
-         </div>
-         <div class="gimnasio1">
-            <h3 class="contenido1">Musculación</h3>
-            <p>Entrena a la hora que quieras</p>
-
-         </div>
-         <div class="football1">
-            <h3 class="contenido1">football</h3>
-            <p> <i class="fa-solid fa-futbol"></i> lunes 19:00hs</p>
-            <p><i class="fa-solid fa-futbol"></i> martes 21:00hs</p>
-            <p> <i class="fa-solid fa-futbol"></i> jueves 21:00hs</p>
-            <p><i class="fa-solid fa-futbol"></i> viernes 19:00hs</p>
-         </div>
+        <div class="boxeo1">
+          <div class="card3">
+            <h3 class="contenido1">Boxeo</h3>
+            <p>
+              <i class="fa-solid fa-heart-pulse"></i> lunes 20:00hs
+            </p>
+            <p>
+              <i class="fa-solid fa-heart-pulse"></i> Miercoles 20:00hs
+            </p>
+            <p>
+              <i class="fa-solid fa-heart-pulse"></i> Viernes 20:00hs
+            </p>
+            <p>
+              <i class="fa-solid fa-heart-pulse"></i> Sabado 11:00hs
+            </p>
+          </div>
+        </div>
+        <div class="crossfit1">
+          <h3 class="contenido1">Crossfit</h3>
+          <p>
+            <i class="fa-solid fa-dumbbell"></i> martes 16:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-dumbbell"></i> jueves 18:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-dumbbell"></i> Viernes 16:00hs
+          </p>
+        </div>
+        <div class="spinning1">
+          <h3 class="contenido1">spinning</h3>
+          <p>
+            <i class="fa-solid fa-person-biking"></i> lunes 10:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-person-biking"></i> martes 09:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-person-biking"></i> jueves 09:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-person-biking"></i> viernes 10:00hs
+          </p>
+        </div>
+        <div class="zumba1">
+          <h3 class="contenido1">Zumba</h3>
+          <p>
+            <i class="fa-solid fa-bolt"></i> miercoels 08:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-bolt"></i> jueves 09:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-bolt"></i> viernes 08:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-bolt"></i> sabados 10:00hs
+          </p>
+        </div>
+        <div class="gimnasio1">
+          <h3 class="contenido1">Musculación</h3>
+          <p>Entrena a la hora que quieras</p>
+        </div>
+        <div class="football1">
+          <h3 class="contenido1">football</h3>
+          <p>
+            <i class="fa-solid fa-futbol"></i> lunes 19:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-futbol"></i> martes 21:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-futbol"></i> jueves 21:00hs
+          </p>
+          <p>
+            <i class="fa-solid fa-futbol"></i> viernes 19:00hs
+          </p>
+        </div>
       </section>
-   </main>
-
-   <footer class="pie-pagina">
+    </main>
+    <footer class="pie-pagina">
       <div class="grupo-1">
-         <div class="box">
-            <figure>
-               <a class="navbar-brand text-light " href="#">Sportivo <span class="rojo">Devoto</span></a>
-            </figure>
-         </div>
-         <div class="box">
-            <h2 class="color">SOBRE NOSOTROS</h2>
-            <p> <i class="fa-solid fa-street-view"></i> Gabriela Mistral 3151, C1419 CABA</p>
-            <p> <i class="fa-solid fa-phone"></i>11-5678-1367</p>
-         </div>
-
-         <div class="box">
-            <h2 class="h2footer">SIGUENOS</h2>
-            <div class="red-social">
-               <a href="https://www.facebook.com/gsportivodevoto/" class="fa fa-facebook" target="blank"></a>
-               <a href="https://www.instagram.com/gsportivodevoto/?hl=es" class="fa fa-instagram" target="blank"></a>
-
-            </div>
-         </div>
+        <div class="box">
+          <figure>
+            <a class="navbar-brand text-light " href="#">Sportivo <span class="rojo">Devoto</span>
+            </a>
+          </figure>
+        </div>
+        <div class="box">
+          <h2 class="color">SOBRE NOSOTROS</h2>
+          <p>
+            <i class="fa-solid fa-street-view"></i> Gabriela Mistral 3151, C1419 CABA
+          </p>
+          <p>
+            <i class="fa-solid fa-phone"></i>11-5678-1367
+          </p>
+        </div>
+        <div class="box">
+          <h2 class="h2footer">SIGUENOS</h2>
+          <div class="red-social">
+            <a href="https://www.facebook.com/gsportivodevoto/" class="fa fa-facebook" target="blank"></a>
+            <a href="https://www.instagram.com/gsportivodevoto/?hl=es" class="fa fa-instagram" target="blank"></a>
+          </div>
+        </div>
       </div>
       <div class="grupo-2">
-         <small>&copy; 2022 <b>Santiago Messina</b> </small>
+        <small>&copy; 2022 <b>Santiago Messina</b>
+        </small>
       </div>
-   </footer>
-
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-
-</body>
-
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  </body>
 </html>
