--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./paginas/style.css">
+    <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   </head>
   <body class="body">
@@ -50,8 +50,8 @@
             <button type="button" data-bs-target="#homeHerocarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#homeHerocarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
           </div>
-          <div class="carousel-inner h-100">
-            <div class="carousel-item active " style="background-image: url(./imagenes/inicio3.jpg)" class="img-fluid" alt="Responsive image" )>
+          <div class="carousel-inner">
+            <div class="carousel-item active " style="background-image: url(./imagenes/inicio3.jpg);" class="img-fluid" alt="Responsive image" )>
               <div class="text-center">
                 <h1 class="hero-headline white text-center text-light">Todo lo que buscas en un solo gimnasio</h1>
                 <h3 class="hero-subhead white text-center">
