--- a/paginas/clases.html
+++ b/paginas/clases.html
@@ -13,7 +13,7 @@
    <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    
-   <link rel="stylesheet" href="./style.css">
+   <link rel="stylesheet" href="../css/main.css">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 
 </head>
@@ -48,8 +48,8 @@
          </div>
       </nav>
    </header>
-   <main class="">
-      <h1 class="centrado">Nuestros Precios</h1>
+   <main class="bodyBg">
+      <h1 class="centrar__h1">Nuestros Precios</h1>
       <section class="inicio2">
          <div class="row">
             <div class="col-sm-6">
@@ -57,6 +57,7 @@
                 <div class="card-body">
                   <h1 class="card-title">PLAN PLATINIUM</h1>
                   <p class="card-text">ENTRENA CUANDO QUIERAS EN TU GIMNASIO DE ELECCION </p>
+                  <div class="division">
                   <p class="precio">$2999,99</p>
                   <p>Inscripcion: $999</p>
                   <p>Matricula anual: $3289</p>
@@ -70,6 +71,7 @@
                      <li class="lista"> <i class="fa-solid fa-check"></i>Sin cargo de cancelación</li>
                      
                   </ul>
+               </div>
                 </div>
               </div>
             </div>
