utilice maps, extend y mixin

--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -11,8 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <meta name="keywords" content="gimnasio, horarios, turnos, mañana, tarde, noche musculacion, pesas, boxeo, crossfit, spinning, zumba, futbol, football, ejercicio, entrenamiento, dieta, salud">
+    <meta name="description" content="Sportivo Devoto te ofrece diferentes horarios en diferentes actividades para que puedas entrenar en el momento que mas se adapte a tu dia">
   </head>
   <body class="bodyBg">
     <header class="headerInicio">
@@ -25,7 +27,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="./precios.html">Precios</a>
               </li>
@@ -45,7 +46,7 @@
     </header>
     <main class="inicio">
       <div class="centrar__h1">
-        <h1>Actividades</h1>
+        <h1>Horarios</h1>
       </div>
       <section class="actividades1">
         <div class="boxeo1">
