--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <meta name="keywords" content="gimnasio, musculacion, pesas, ejercicio, entrenamiento, dieta, salud">
+    <meta name="description" content="Sportivo Devoto te desafiamos a entrenar de forma accesible, fomentando los buenos vinculos y la interaccion como comunidad. Contamos con actividades Indoor/Outdoor. ">
   </head>
   <body class="body">
     <header class="headerInicio">
@@ -25,7 +27,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              </li>
+              
               <li class="nav-item">
                 <a class="nav-link text-light" href="./paginas/precios.html">Precios</a>
               </li>
@@ -51,7 +53,7 @@
             <button type="button" data-bs-target="#homeHerocarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active " style="background-image: url(./imagenes/inicio3.jpg);" class="img-fluid" alt="Responsive image" )>
+            <div class="carousel-item active img-fluid" style="background-image: url(./imagenes/inicio3.jpg);">
               <div class="text-center">
                 <h1 class="hero-headline white text-center text-light">Todo lo que buscas en un solo gimnasio</h1>
                 <h3 class="hero-subhead white text-center">
@@ -59,7 +61,7 @@
                 </h3>
               </div>
             </div>
-            <div class="carousel-item " style="background-image: url(./imagenes/inicio6.png)" class="img-fluid" alt="Responsive image" )>
+            <div class="carousel-item img-fluid" style="background-image: url(./imagenes/inicio6.png)">
               <div class="text-center">
                 <h1 class="hero-headline white text-center">Todo lo que buscas en un solo gimnasio</h1>
                 <h3 class="hero-subhead white text-center">
