--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -11,8 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7c9511813.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../paginas/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <meta name="keywords" content="gimnasio, musculacion, respuesta, pregunta, informacion, saber mas, pesas, boxeo, crossfit, spinning, zumba, futbol, football, ejercicio, entrenamiento, dieta, salud">
+    <meta name="description" content="Sportivo Devoto te respondera tu consulta lo antes posible y en 24 horas habiles desde el dia que ha sido efectuada tu pregunta ">
   </head>
   <body class="bodyBg">
     <header class="headerInicio">
@@ -25,7 +27,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="./precios.html">Precios</a>
               </li>
@@ -43,7 +44,7 @@
         </div>
       </nav>
     </header>
-    <main class="mainBg mainContacto"">
+    <main class="mainBg mainContacto">
 			<div class=" centrar__h1">
       <h1>Contactanos</h1>
       </div>
@@ -51,7 +52,7 @@
         <div class="contact-wrapper animated bounceInUp">
           <div class="contact-form">
             <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara comunicandose con vos!</h5>
-            <form action="">
+            <form>
               <p>
                 <label>Nombre y Apellido</label>
                 <input type="text" name="fullname">
@@ -78,6 +79,7 @@
             </form>
           </div>
         </div>
+      </div> 
     </main>
     <footer class="pie-pagina">
       <div class="grupo-1">
@@ -109,6 +111,6 @@
         </small>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</html>
+  </html>
