--- a/paginas/precios.html
+++ b/paginas/precios.html
@@ -13,6 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
+    <meta name="keywords" content="gimnasio, musculacion, precios, cardio, aranceles, accesible, barato, pesas, ejercicio, entrenamiento, dieta, salud">
+    <meta name="description" content="Sportivo Devoto te ofrece promociones increibles para que vengas a entrenar todos los dias y mantengas una rutina ordenada ">
   </head>
   <body class="bodyBg">
     <header class="headerInicio container-fluid">
@@ -25,7 +27,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              </li>
               <li class="nav-item">
                 <a class="nav-link text-light" href="#">Precios</a>
               </li>
@@ -52,18 +53,20 @@
           <div class="col-sm-6">
             <div class="card">
               <div class="card-body">
-                <h1 class="card-title">PLAN PLATINIUM</h1>
+                <p class="card-title">PLAN PLATINIUM</p>
                 <p class="card-text">ENTRENA CUANDO QUIERAS EN TU GIMNASIO DE ELECCION </p>
                 <p class="precio">$2999,99</p>
                 <p>Inscripcion: $999</p>
                 <p>Matricula anual: $3289</p>
                 <p>Sin multa de cancelacion</p>
+                <p>CONDICIONES</p>
                 <ul>
-                  <h5>CONDICIONES</h5>
                   <li class="lista">
                     <i class="fa-solid fa-check"></i> Sin multa de cancelación con aviso previo a 30 días antes de la fecha de cobro
                   </li>
-                  <h5> BENEFICIOS INCLUIDOS</h5>
+                </ul>
+                  <p> BENEFICIOS INCLUIDOS</p>
+                  <ul>
                   <li class="lista">
                     <i class="fa-solid fa-check"></i> Areas de peso libre, peso integrado clases colectivas
                   </li>
@@ -74,27 +77,31 @@
                     <i class="fa-solid fa-check"></i>Sin cargo de cancelación
                   </li>
                 </ul>
+                
               </div>
             </div>
           </div>
           <div class="col-sm-6 ">
             <div class="card card2">
               <div class="card-body text-center">
-                <h1 class="card-title">PLAN BLACK </h1>
+                <h2 class="card-title">PLAN BLACK </h2>
                 <p class="card-text">ENTRENA CUANDO QUIERAS EN TU GIMNASIO DE ELECCION </p>
                 <p class="precio">$3299,99</p>
                 <p>Inscripcion: $999</p>
                 <p>Matricula anual: $3289</p>
                 <p>Con multa de cancelacion</p>
+
+                <p>CONDICIONES</p>
                 <ul>
-                  <h5>CONDICIONES</h5>
                   <li class="lista">
                     <i class="fa-solid fa-check"></i> Contrato a 12 meses
                   </li>
                   <li class="lista">
                     <i class="fa-solid fa-check"></i> Cancelación con aviso previo a 30 días antes de la fecha de cobro.
                   </li>
-                  <h5> BENEFICIOS INCLUIDOS</h5>
+                </ul>
+                  <p> BENEFICIOS INCLUIDOS</p>
+                  <ul>
                   <li class="lista">
                     <i class="fa-solid fa-check"></i> Sillones de masaje
                   </li>
@@ -105,6 +112,7 @@
                     <i class="fa-solid fa-check"></i>Acceso a todas las áreas del gimnasio
                   </li>
                 </ul>
+                
               </div>
             </div>
           </div>
