--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -52,7 +52,7 @@
         <div class="contact-wrapper animated bounceInUp">
           <div class="contact-form">
             <h5 class="h5contacto">¡Hola gracias por escribirnos, en menos de 24 horas nuestro equipo estara comunicandose con vos!</h5>
-            <form action="./form.php" method="POST">
+            <form>
               <p>
                 <label>Nombre y Apellido</label>
                 <input type="text" name="fullname">
