--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
             <h2>Oops! Pagina no encontrada</h2>
             <h1>404 </h1>
             <p>No pudimos encontrar la pagina que estabas buscando</p>
-            <a href="../index.html"> Volver al incio</a>
+            <a href="https://santiagomessina1.github.io/Sportivo-devoto/"> Volver al incio</a>
           </div>
     </main>
     <footer class="pie-pagina">
